goa: minor fix, apply lls_iter

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,14 @@ gaon_cifar/models/**
 *.out
 *.sh
 
+
 *BUILD
 *WORKSPACE
 *autopar.py
 *bazel*
 *sbatch*
-
+*slurm*
+*tensorboard.py
+*run_general*
+*.test_exp
+*__par_main_wrapper__.py
