--- a/gaon_cifar/config.json
+++ b/gaon_cifar/config.json
@@ -3,7 +3,7 @@
   "model_dir": "models/adv_trained",
 
   "_comment": "===== DATASET CONFIGURATION =====",
-  "data_path": "cifar10_data",
+  "data_path": "../cifar10_data",
 
   "_comment": "===== TRAINING CONFIGURATION =====",
   "tf_random_seed": 451760341,
